test/ui/test/redefinition-of-intrinsic-binding.stderr
error[E040]: the intrinsic type ‘Text’ is defined multiple times
   ┌─ ${TEST_FOLDER}/redefinition-of-intrinsic-binding.lushui:7:6
   │
 7 │ data Text: Type
   │      ──── previous definition
   │
   ├─ ${TEST_FOLDER}/redefinition-of-intrinsic-binding.lushui:11:10
   │
11 │     data Text: topmost.Type
   │          ════ redefinition

error: aborting due to previous error

