test/ui/test/redefinition-of-intrinsic-binding.lushui
;;; TEST compiler-args --no-core -Z internals

@intrinsic
data Type: Type

@intrinsic
data Text: Type

module disambiguator of
    @intrinsic
    data Text: topmost.Type

